<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="clipboard_list">clipboard_list</string>
    <string name="badge_check">badge_check</string>
    <string name="bar_chart">bar_chart</string>
    <string name="user">user</string>
</resources>