<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_clipboard_list"
        android:icon="@drawable/ic_clipboard_list"
        android:title="@string/clipboard_list" />

    <item
        android:id="@+id/navigation_badge_check"
        android:icon="@drawable/ic_badge_check"
        android:title="@string/badge_check" />
    <item
        android:id="@+id/navigation_bar_chart"
        android:icon="@drawable/ic_bar_chart"
        android:title="@string/bar_chart" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/user" />

</menu>